[gd_scene load_steps=6 format=3 uid="uid://m2rahrkm0b67"]

[ext_resource type="Script" path="res://scenes/screens/main_menu.gd" id="1_es5ga"]
[ext_resource type="ArrayMesh" uid="uid://dkd8hw6c0wt0n" path="res://assets/kenney_spaceships/craft_speederA.obj" id="1_ix8oe"]
[ext_resource type="Environment" uid="uid://dmky6ixl1xvdh" path="res://assets/resources/space_environment.tres" id="2_l2sli"]
[ext_resource type="PackedScene" uid="uid://cvya6ox4fom6q" path="res://scenes/player/player.tscn" id="4_xj2e0"]
[ext_resource type="Script" path="res://scenes/screens/wave_selection.gd" id="5_lvujf"]

[node name="MainMenu" type="Node3D"]
transform = Transform3D(1, 0.000381121, -2.96111e-05, -0.000381114, 1, 0.000210377, 2.97115e-05, -0.000210363, 1, 0, 0, 0)
script = ExtResource("1_es5ga")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("2_l2sli")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="Ship" type="Node3D" parent="."]
transform = Transform3D(1, -4.68217e-11, 3.63798e-12, 7.04681e-12, 1, 0, 0, 0, 1, -1.83244, -0.000698378, 5.42975e-05)
visible = false

[node name="ShipModel" type="MeshInstance3D" parent="Ship"]
mesh = ExtResource("1_ix8oe")
skeleton = NodePath("../..")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.875468, -0.0332327, 0.482132, 0.000435323, 0.997687, 0.0679787, -0.483276, -0.0593032, 0.873457, 2.12752, 1.05916, 3.13386)

[node name="LblTitle" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -465.0
offset_top = 59.0
offset_right = -65.0
offset_bottom = 114.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 40
text = "Space Mission Destroyer"

[node name="LblControls" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1116.0
offset_top = 517.0
offset_right = -643.0
offset_bottom = 607.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 20
text = "[SETAS] Mover
[X] Desviar/Refletir
[Z] Atirar

"

[node name="BtnPlay" type="Button" parent="."]
custom_minimum_size = Vector2(200, 0)
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -275.0
offset_top = -25.0
offset_right = -75.0
offset_bottom = 25.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "PLAY"

[node name="Player" parent="." instance=ExtResource("4_xj2e0")]
transform = Transform3D(1, -0.000381115, 2.96913e-05, 0.00038112, 1, -0.000210366, -2.96313e-05, 0.000210374, 1, -1.85822, 0.296225, 5.31365)

[node name="HeadsUpDisplay" parent="Player" index="4"]
visible = false

[node name="PlayerTarget" type="Marker3D" parent="."]
transform = Transform3D(1, -1.63245e-10, 1.09139e-11, 7.04592e-12, 1, 0, -1.09139e-11, 0, 1, -1.81153, 0.389235, -0.300709)

[node name="Panel" type="Panel" parent="."]
offset_left = 877.0
offset_top = 372.0
offset_right = 1077.0
offset_bottom = 427.0
script = ExtResource("5_lvujf")

[node name="LeftButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.36
anchor_top = 0.218
anchor_right = 0.555
anchor_bottom = 0.982
offset_left = -66.0
offset_top = -5.99
offset_right = -66.0
offset_bottom = -6.01
text = "<"

[node name="RightButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.36
anchor_top = 0.218
anchor_right = 0.555
anchor_bottom = 0.982
offset_left = 83.0
offset_top = -4.99
offset_right = 83.0
offset_bottom = -5.01
text = ">"

[node name="WaveLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.273
anchor_right = 1.0
anchor_bottom = 0.691
offset_left = 77.0
offset_top = -9.015
offset_right = -78.0
offset_bottom = -9.005
text = "WAVE"
horizontal_alignment = 1
vertical_alignment = 2

[node name="LevelLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.273
anchor_right = 1.0
anchor_bottom = 0.691
offset_left = 81.0
offset_top = 9.985
offset_right = -79.0
offset_bottom = 9.995
horizontal_alignment = 1
vertical_alignment = 2

[editable path="Player"]
